# bitefile

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  bite_parser.c  bite_parser.h  compile_flags.txt  wadlike.py
.github/workflows/: main.yml
assets/: hello.txt  other.txt
cmake/: InstallInstructions.cmake  bitefileConfig.cmake.in
docs/: format-spec.md
examples/: CMakeLists.txt
examples/basic/: basic.c
examples/basic/assets/: other.txt
examples/basic/assets/basic/: hello.txt
examples/multiple_files/: multiple_files.c
examples/multiple_files/assets/multiple_files/: file1.txt  file2.txt  file3.txt
examples/utf8/: utf8.c
examples/utf8/assets/utf8/: thïs_filénàme_hãs_special_chars
include/bitefile/: bite.h
src/: bite.c  bite_parser.c  bite_parser.h  main.c
tools/: bite_packer.py  bite_unpacker.py
